--- a/src/app/auth/login/basic-login/basic-login.component.html
+++ b/src/app/auth/login/basic-login/basic-login.component.html
@@ -32,12 +32,12 @@
                   <button type="button" (click)="login()"
                     class="btn btn-danger btn-md btn-block waves-effect text-center m-b-20">{{'Sign In' | translate}}</button>
                 </div>
-                <div class="btns">
+<!--                 <div class="btns">
                   <img src="assets/en.png" (click)="changeLng('en')"
                     [ngClass]="getClassName() == 'en' ? 'flagActive':'flagDeactive'" alt="">
                   <img src="assets/spanish.png" (click)="changeLng('spanish')"
                     [ngClass]="getClassName() == 'spanish' ? 'flagActive':'flagDeactive'" alt="">
-                </div>
+                </div> -->
               </div>
             </div>
           </form>
